fpt-charts/templates/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fpt-backend-svc
  labels:
    app: fpt-backend
spec:
  ports:
  - port: 80
    targetPort: http
    name: http
  selector:
    app: fpt-backend
